[package]
name = "cherubgyre"
version = "0.1.0"
edition = "2021"

[lib]
path= "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "cherubgyre"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
lambda_runtime = "0.13"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.55.0"
dotenv = "0.15"
aws-types = "1.3.3" # Add this line
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] } # Enable serde for chrono
fmt = "0.1.0"

[dependencies.aws_lambda_events]
version = "0.15"
features = ["apigw"]
